# avisha.rs

./: Cargo.toml  README.md  dev.workflow  index.html  main.js
scripts/: serve.run  watch.run
src/: app.rs  form.rs  lease_form.rs  lib.rs  site_form.rs  tenant_form.rs  validate.rs
src/tenant/: form.rs  list.rs  mod.rs  model.rs
static/: base.css  grid.css  style.css  wing.css
