[package]
name = "avisha"
version = "0.1.0"
authors = ["Jack Mordaunt <jackmordaunt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.12"

# [dependencies.web-sys]
# version = "0.3.42"
# features = [
#     "KeyboardEvent",
#     "HtmlElement",
# ]