[package]
name = "avisha"
version = "0.1.0"
authors = ["Jack Mordaunt <jackmordaunt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17"
serde = "1.0.114"
serde_derive = "1.0.114"
yewtil = "0.3.0"
strum = "0.18.0"
strum_macros = "0.18.0"
yew-components = "0.2.0"
chrono = { version = "0.4.13", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.42"
features = [
    "FormData",
    "Event",
    "FocusEvent",
    "InputEvent",
    "HtmlElement",
    "HtmlSelectElement",
]
